--- a/packages/insomnia-app/app/ui/css/components/unit-tests.less
+++ b/packages/insomnia-app/app/ui/css/components/unit-tests.less
@@ -39,15 +39,19 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        padding:0px var(--padding-sm);
+        padding:0px var(--padding-sm) 0px 0px;
 
         button {
           padding: 0px var(--padding-sm);
+          flex: 0 0 auto;
         }
 
         h2 {
           font-size: var(--font-size-lg);
+          flex: 1 1 auto;
           white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
         }
 
         & > * {
@@ -62,7 +66,8 @@
 
         .form-control {
           width: 100%;
-          max-width: 18rem;
+          max-width: 16rem;
+          flex: 0 0 auto;
           padding: var(--padding-xs) var(--padding-sm);
           border: 1px solid var(--hl-md);
           border-radius: var(--radius-sm);
@@ -124,19 +129,27 @@
         height: var(--line-height-xs);
         width: 100%;
         box-sizing: border-box;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
     }
   }
 
   &__top-header {
-    padding: 0 var(--padding-md);
+    padding: 0px 0px 0px var(--padding-sm);
     height: var(--line-height-lg);
-    padding-right: 0;
     border-bottom: 1px solid var(--hl-md);
     display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-content: stretch;
     align-items: center;
 
     button {
+      flex: 0 0 auto;
+      align-self: center;
       i {
         font-size: var(--font-size-xs);
         padding-left: var(--padding-xxs);
@@ -148,8 +161,10 @@
     }
 
     h2 {
-      margin: 0 auto 0 0;
-      font-size: var(--font-size-xl);
+      flex: 1 1 auto;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
 }
